examples/testing/negative_costs-lower_bounds/ex_undefined.ces

eq(h(X), 1 ,[a(X),b(X )], [X>=1]).

eq(b(X), 1 ,[b(X )], [X>=1]).
eq(b(X), 0,[], [X=0]).

eq(a(X), -1 ,[a(X )], [X>=1]).
eq(a(X), 0,[], [X=0]).
